fix: set max width to not overflow content

--- a/src/components/CardBlog/CardBlog.module.css
+++ b/src/components/CardBlog/CardBlog.module.css
@@ -25,6 +25,7 @@
 }
 
 .categories_wrapper {
+  max-width: 12rem;
   width: max-content;
   background-color: #4aab3d;
   border-radius: 0.375rem;
@@ -34,6 +35,10 @@
   text-transform: capitalize;
   margin-left: 2.5rem;
   transform: translateY(-1.4rem);
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .categories_wrapper span {
